Fix scrollbar width for FireFox browser

--- a/src/components/IngredientsList/IngredientsList.module.css
+++ b/src/components/IngredientsList/IngredientsList.module.css
@@ -1,3 +1,4 @@
 .list {
     overflow-y: scroll;
+    scrollbar-width: thin;
 }
